--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.android.support:support-v13:22.1.1'
     compile 'com.android.support:cardview-v7:21.0.+'
+    compile "com.google.android.gms:play-services:3.1.+"
 }
