--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion '22.0.1'
 
     defaultConfig {
-        applicationId "com.slate"
-        minSdkVersion 18
+        applicationId "com.slate1"
+        minSdkVersion 14
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:support-v13:22.1.1'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile "com.google.android.gms:play-services:3.1.+"
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 }
