--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.slate" >
+    package="com.slate1" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -9,10 +9,10 @@
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <permission
-        android:name="com.slate.permission.C2D_MESSAGE"
+        android:name="com.slate1.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="com.slate.permission.C2D_MESSAGE" />
+    <uses-permission android:name="com.slate1.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -30,8 +30,13 @@
         </activity>
         <activity
             android:name=".activities.SlateActivity"
-            android:label="@string/title_activity_slate"
-            android:noHistory="true" > <!-- TODO: Remove this once more screens are added. This is a temporary fix. -->
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_slate"> <!-- TODO: Add android:noHistory="true" as a temporary fix for notification back issue. -->
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable"/>
         </activity>
 
         <receiver
@@ -39,7 +44,8 @@
             android:permission="com.google.android.c2dm.permission.SEND" >
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-                <category android:name="com.slate" />
+
+                <category android:name="com.slate1" />
             </intent-filter>
         </receiver>
 
